; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnx2x/extr_bnx2x_link.c_bnx2x_ets_bw_limit_common.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnx2x/extr_bnx2x_link.c_bnx2x_ets_bw_limit_common.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.link_params = type { %struct.bnx2x* }
%struct.bnx2x = type { i32 }

@NETIF_MSG_LINK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"ETS enabled BW limit configuration\0A\00", align 1
@NIG_REG_P0_TX_ARB_CLIENT_IS_SUBJECT2WFQ = common dso_local global i32 0, align 4
@NIG_REG_P0_TX_ARB_CLIENT_CREDIT_MAP = common dso_local global i32 0, align 4
@NIG_REG_P0_TX_ARB_CREDIT_UPPER_BOUND_0 = common dso_local global i32 0, align 4
@ETS_BW_LIMIT_CREDIT_UPPER_BOUND = common dso_local global i32 0, align 4
@NIG_REG_P0_TX_ARB_CREDIT_UPPER_BOUND_1 = common dso_local global i32 0, align 4
@PBF_REG_ETS_ENABLED = common dso_local global i32 0, align 4
@PBF_REG_NUM_STRICT_ARB_SLOTS = common dso_local global i32 0, align 4
@NIG_REG_P0_TX_ARB_CLIENT_IS_STRICT = common dso_local global i32 0, align 4
@PBF_REG_COS0_UPPER_BOUND = common dso_local global i32 0, align 4
@PBF_REG_COS1_UPPER_BOUND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.link_params*)* @bnx2x_ets_bw_limit_common to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bnx2x_ets_bw_limit_common(%struct.link_params* %0) #0 {
  %2 = alloca %struct.link_params*, align 8
  %3 = alloca %struct.bnx2x*, align 8
  store %struct.link_params* %0, %struct.link_params** %2, align 8
  %4 = load %struct.link_params*, %struct.link_params** %2, align 8
  %5 = getelementptr inbounds %struct.link_params, %struct.link_params* %4, i32 0, i32 0
  %6 = load %struct.bnx2x*, %struct.bnx2x** %5, align 8
  store %struct.bnx2x* %6, %struct.bnx2x** %3, align 8
  %7 = load i32, i32* @NETIF_MSG_LINK, align 4
  %8 = call i32 @DP(i32 %7, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  %9 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %10 = load i32, i32* @NIG_REG_P0_TX_ARB_CLIENT_IS_SUBJECT2WFQ, align 4
  %11 = call i32 @REG_WR(%struct.bnx2x* %9, i32 %10, i32 24)
  %12 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %13 = load i32, i32* @NIG_REG_P0_TX_ARB_CLIENT_CREDIT_MAP, align 4
  %14 = call i32 @REG_WR(%struct.bnx2x* %12, i32 %13, i32 4378)
  %15 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %16 = load i32, i32* @NIG_REG_P0_TX_ARB_CREDIT_UPPER_BOUND_0, align 4
  %17 = load i32, i32* @ETS_BW_LIMIT_CREDIT_UPPER_BOUND, align 4
  %18 = call i32 @REG_WR(%struct.bnx2x* %15, i32 %16, i32 %17)
  %19 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %20 = load i32, i32* @NIG_REG_P0_TX_ARB_CREDIT_UPPER_BOUND_1, align 4
  %21 = load i32, i32* @ETS_BW_LIMIT_CREDIT_UPPER_BOUND, align 4
  %22 = call i32 @REG_WR(%struct.bnx2x* %19, i32 %20, i32 %21)
  %23 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %24 = load i32, i32* @PBF_REG_ETS_ENABLED, align 4
  %25 = call i32 @REG_WR(%struct.bnx2x* %23, i32 %24, i32 1)
  %26 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %27 = load i32, i32* @PBF_REG_NUM_STRICT_ARB_SLOTS, align 4
  %28 = call i32 @REG_WR(%struct.bnx2x* %26, i32 %27, i32 0)
  %29 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %30 = load i32, i32* @NIG_REG_P0_TX_ARB_CLIENT_IS_STRICT, align 4
  %31 = call i32 @REG_WR(%struct.bnx2x* %29, i32 %30, i32 7)
  %32 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %33 = load i32, i32* @PBF_REG_COS0_UPPER_BOUND, align 4
  %34 = load i32, i32* @ETS_BW_LIMIT_CREDIT_UPPER_BOUND, align 4
  %35 = call i32 @REG_WR(%struct.bnx2x* %32, i32 %33, i32 %34)
  %36 = load %struct.bnx2x*, %struct.bnx2x** %3, align 8
  %37 = load i32, i32* @PBF_REG_COS1_UPPER_BOUND, align 4
  %38 = load i32, i32* @ETS_BW_LIMIT_CREDIT_UPPER_BOUND, align 4
  %39 = call i32 @REG_WR(%struct.bnx2x* %36, i32 %37, i32 %38)
  ret void
}

declare dso_local i32 @DP(i32, i8*) #1

declare dso_local i32 @REG_WR(%struct.bnx2x*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
